[CSS] fix menu on mobile

--- a/src/assets/stylesheets/layout/_nav.scss
+++ b/src/assets/stylesheets/layout/_nav.scss
@@ -191,8 +191,9 @@
       // inside the drawer is always styled accordingly
       html & .md-nav__title {
         position: relative;
-        height: 14rem;
-        padding: 6rem 1.6rem 0.4rem;
+        height: 6rem;
+        padding: 0.8rem 4.6rem 0.4rem;
+        padding-right: 0;
         background-color: $md-color-black--lightest;
         color: $md-color-black--light;
         font-weight: 400;
@@ -247,6 +248,12 @@
             width: 6.4rem;
             height: 6.4rem;
             font-size: 4.8rem;
+            
+            @include break-to-device(tablet) { 
+              width: 4rem;
+              height: 4rem;
+              top: -1.6rem;
+            }
           }
 
           // Hide back arrow icon
